@@ -6,12 +6,54 @@ public class Knight extends Piece
 	{
 		super(row, col);
 	}
-	
+
 	public ArrayList<Move> moves()
 	{
-		return null; //stub
+		ArrayList<Move> legalMoves = new ArrayList<Move>();
+
+		if (Board.isLegal(row() - 2, col() - 1))
+		{
+			legalMoves.add(new Move(row(), col(), row() - 2, col() - 1));
+		}
+
+		if (Board.isLegal(row() - 2, col() + 1))
+		{
+			legalMoves.add(new Move(row(), col(), row() - 2, col() + 1));
+		}
+
+		if (Board.isLegal(row() + 2, col() - 1))
+		{
+			legalMoves.add(new Move(row(), col(), row() + 2, col() - 1));
+		}
+
+		if (Board.isLegal(row() + 2, col() + 1))
+		{
+			legalMoves.add(new Move(row(), col(), row() + 2, col() + 1));
+		}
+
+		if (Board.isLegal(row() - 1, col() - 2))
+		{
+			legalMoves.add(new Move(row(), col(), row() - 1, col() - 2));
+		}
+
+		if (Board.isLegal(row() - 1, col() + 2))
+		{
+			legalMoves.add(new Move(row(), col(), row() - 1, col() + 2));
+		}
+
+		if (Board.isLegal(row() + 1, col() - 2))
+		{
+			legalMoves.add(new Move(row(), col(), row() + 1, col() - 2));
+		}
+
+		if (Board.isLegal(row() + 1, col() + 2))
+		{
+			legalMoves.add(new Move(row(), col(), row() + 1, col() + 2));
+		}
+
+		return legalMoves;
 	}
-	
+
 	public String toString()
 	{
 		if (color() == Definitions.Color.WHITE)
